# echoapi_legacy

./: Cargo.toml  Rocket.toml
data/: users.json
data/projects/aczphgdsmfdndvyn/: root.json
data/projects/pckytitdfumovxwr/: Knock.m4a  root.json
data/projects/xsovqwlbkcqplwvp/: root.json
src/: cors.rs  main.rs  models.rs  params.rs  session_db.rs
src/models/: ease_settings.rs  event.rs  projects.rs  scene.rs  soundcue.rs  time.rs  user.rs
src/params/: create_project_params.rs
