[package]
name = "echoserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
surrealdb = { version = "1.0.0-beta.9", features = ["kv-rocksdb"] }

[dependencies.rocket]
version = "0.5.0-rc.2"
features = [ "json" ]
